--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,83 @@
 .read-the-docs {
   color: #888;
 }
+
+
+
+/*==================
+  Custom Styles
+==================*/
+:root{
+  --background-color: #f5f5f5;
+  --text-color: #0b0b0b;
+}
+
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif ;
+  color: var(--text-color);
+  background-color: var(--background-color);
+}
+
+.app-container {  
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 3rem 1.5rem;
+}
+
+/*===================
+      HEADER
+=====================*/
+
+.header {
+  margin-bottom: 4rem;
+  text-align: center;
+}
+
+.header h1{
+  font-size: 3.5rem;
+  margin-bottom: 0.5rem;
+
+}
+
+.subtitle {
+  opacity: 0.8;
+  font-size: 1.2rem;
+}
+
+
+
+/*===================
+      TIMER
+=====================*/
+
+.timer {
+  margin-bottom: 4rem;
+  text-align: center;
+}
+
+.clock {
+  font-size: 5rem;
+  margin-bottom: 2rem;
+  font-weight: bold;
+}
+
+.start-button {
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  background-color: #44a247;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.end-button {
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  background-color: #c41a1a;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
